package entity;

import java.util.Date;

public class Chapter {
    private long chapterId;
    private String title;
    private int chapterNumber;
    private Date releaseDate;

}
