package entity;

import java.util.Date;

public class Episode {
    private long episodeId;
    private String title;
    private String anime;
    private int episodeNumber;
    private Date releaseDate;

}
