package entity;

import java.util.List;

public class Watchlist {
    private List<Media> watchlist;
}
